# crc32_sse4

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Crc.hpp  Traits.hpp  crc32c.h
src/: Crc.cpp  crc32c.cpp  crc32c_sse42.cpp
test/: CMakeLists.txt  test.cpp
